--- a/crawling_project/pyproject.toml
+++ b/crawling_project/pyproject.toml
@@ -18,5 +18,6 @@ dependencies = [
     "requests>=2.32.5",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
+    "tensorflow>=2.20.0",
     "yfinance>=0.2.66",
 ]
