--- a/crawling_project/pyproject.toml
+++ b/crawling_project/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.14.2",
+    "fastapi>=0.123.9",
     "folium>=0.20.0",
     "ipykernel>=7.1.0",
     "jupyter>=1.1.1",
@@ -13,11 +14,16 @@ dependencies = [
     "numpy>=2.3.5",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
+    "playwright>=1.57.0",
     "prophet>=1.2.1",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
+    "selenium>=4.38.0",
     "tensorflow>=2.20.0",
+    "undetected-chromedriver>=3.5.5",
+    "uvicorn>=0.38.0",
+    "webdriver-manager>=4.0.2",
     "yfinance>=0.2.66",
 ]
